--- a/macos.local/Applications/Emacs.app/Contents/Info.plist
+++ b/macos.local/Applications/Emacs.app/Contents/Info.plist
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>Emacs</string>
-	<key>CFBundleIconFile</key>
-	<string>AppIcon</string>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
+  <key>CFBundleGetInfoString</key>
+  <string>Emacs</string>
+  <key>CFBundleExecutable</key>
+  <string>Emacs</string>
+  <key>CFBundleIdentifier</key>
+  <string>ca.jjanzen.Emacs</string>
+  <key>CFBundleName</key>
+  <string>Emacs</string>
+  <key>CFBundleIconFile</key>
+  <string>AppIcon.icns</string>
+  <key>CFBundleShortVersionString</key>
+  <string>29.4</string>
+  <key>CFBundleInfoDictionaryVersion</key>
+  <string>6.0</string>
+  <key>CFBundlePackageType</key>
+  <string>APPL</string>
+  <key>IFMajorVersion</key>
+  <integer>0</integer>
+  <key>IFMinorVersion</key>
+  <integer>1</integer>
 </dict>
 </plist>
-
