--- a/Darwin.yaml
+++ b/Darwin.yaml
@@ -361,7 +361,7 @@
 
     - name: Install Emacs RSS feed
       copy:
-        src: config/feed.el
+        src: config/emacs-feed.el
         dest: "{{ config_dir }}/emacs/feed.el"
         owner: jjanzen
         group: staff
