--- a/tasks/zsh.yaml
+++ b/tasks/zsh.yaml
@@ -2,9 +2,23 @@
   package:
     name:
       - zsh
-      - zsh-autosuggestions
-      - zsh-syntax-highlighting
     state: latest
+
+- name: Setup zsh package directory
+  file:
+    path: "~/.zsh"
+    recurse: true
+    state: directory
+
+- name: Install zsh autosuggestions
+  git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions
+    dest: ~/.zsh/zsh-autosuggestions
+
+- name: Install zsh syntax highlighting
+  git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions
+    dest: ~/.zsh/zsh-syntax-highlighting
 
 - name: Configure zsh
   copy:
