--- a/tasks/zsh.yaml
+++ b/tasks/zsh.yaml
@@ -6,19 +6,19 @@
 
 - name: Setup zsh package directory
   file:
-    path: ~/.zsh
+    path: "{{ home }}/.zsh"
     recurse: true
     state: directory
 
 - name: Install zsh autosuggestions
   git:
     repo: https://github.com/zsh-users/zsh-autosuggestions
-    dest: ~/.zsh/zsh-autosuggestions
+    dest: "{{ home }}/.zsh/zsh-autosuggestions"
 
 - name: Install zsh syntax highlighting
   git:
     repo: https://github.com/zsh-users/zsh-autosuggestions
-    dest: ~/.zsh/zsh-syntax-highlighting
+    dest: "{{ home }}/.zsh/zsh-syntax-highlighting"
 
 - name: Configure zsh
   copy:
