--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -19,6 +19,7 @@
           - foot
           - gcc-c++
           - hyfetch
+          - ksshaskpass
           - python3-libdnf5
           - pipx
           - sshpass
