--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -16,7 +16,9 @@
     - name: Install packages
       package:
         name:
+          - bison
           - foot
+          - flex
           - gcc-c++
           - hyfetch
           - ksshaskpass
