--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -21,6 +21,7 @@
           - foot
           - flex
           - gcc-c++
+          - git-delta
           - hyfetch
           - ksshaskpass
           - libfl2
