--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -32,6 +32,7 @@
           - pipx
           - sshpass
           - stack
+          - systemd-devel
         state: latest
 
     - name: Install ansible
