--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -22,32 +22,12 @@
           - foot
           - flex
           - gcc-c++
+          - go
+          - gopls
           - git-delta
           - hyfetch
           - ksshaskpass
           - libfl-devel
-          - libfontenc-devel
-          - libXaw-devel
-          - libXcomposite-devel
-          - libXcursor-devel
-          - libXdmcp-devel
-          - libXtst-devel
-          - libXinerama-devel
-          - libxkbfile-devel
-          - libXrandr-devel
-          - libXres-devel
-          - libXScrnSaver-devel
-          - xcb-util-wm-devel
-          - xcb-util-image-devel
-          - xcb-util-keysyms-devel
-          - xcb-util-renderutil-devel
-          - libXdamage-devel
-          - libXxf86vm-devel
-          - libXv-devel
-          - xcb-util-devel
-          - libuuid-devel
-          - xcb-util-cursor-devel
-          - mesa-libEGL-devel
           - meson
           - python3-libdnf5
           - pipx
