--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -19,6 +19,7 @@
           - bison
           - clangd
           - conan
+          - fastfetch
           - foot
           - flex
           - gcc-c++
