--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -34,6 +34,7 @@
           - pipx
           - sshpass
           - stack
+          - steam
           - syncthing
           - systemd-devel
           - xkeyboard-config-devel
