--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -30,6 +30,7 @@
           - ksshaskpass
           - libfl-devel
           - meson
+          - mpv
           - python3-libdnf5
           - pipx
           - sshpass
@@ -62,10 +63,6 @@
     - name: Install and configure Git
       import_tasks:
         file: tasks/git.yaml
-
-    - name: Install and configure Ghostty
-      import_tasks:
-        file: tasks/ghostty.yaml
 
     - name: Install and configure SSH
       import_tasks:
