--- a/fedora-asahi-remix.yaml
+++ b/fedora-asahi-remix.yaml
@@ -71,6 +71,10 @@
       import_tasks:
         file: tasks/git.yaml
 
+    - name: Install and configure kakoune
+      import_tasks:
+        file: tasks/kakoune.yaml
+
     - name: Install and configure SSH
       import_tasks:
         file: tasks/ssh.yaml
